# SageAttention

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  script.sh  setup.py
bench/: README.md  bench_baseline.py  bench_fa3.py  bench_fa3_fp8.py  bench_qk_int8_pv_fp16_cuda.py  bench_qk_int8_pv_fp16_triton.py  bench_qk_int8_pv_fp8_cuda.py  bench_qk_int8_pv_fp8_cuda_dsk_sm90.py  bench_qk_int8_pv_fp8_cuda_sm90.py
csrc/: cp_async.cuh  cp_async_hip.cuh  dispatch_utils.h  math.cuh  mma.cuh  mma_hip.cuh  numeric_conversion.cuh  numeric_conversion_hip.cuh  permuted_smem.cuh  permuted_smem_hip.cuh  pytorch_extensions_utils.cuh  reduction_utils.cuh  reduction_utils.h  reduction_utils_hip.cuh  reduction_utils_hip.h  utils.cuh  wgmma.cuh
example/: README.md  cogvideox-2b.py  cogvideox1.5-5b.py  cogvideox_infer.py  hunyuan.py  hunyuan_infer.py  ltx_infer.py  mochi.py  mochi_infer.py  original_cogvideo.py  parallel_sageattn_cogvideo.py  run_parallel.sh  sageattn_cogvideo.py  testing_prompts.txt  wan.py  wan_infer.py
patch_test/: test_dsk.py
sageattention/: __init__.py  attn_qk_int8_block_varlen.py  attn_qk_int8_per_block.py  attn_qk_int8_per_block_causal.py  attn_qk_int8_per_block_causal_varlen.py  attn_qk_int8_per_block_h64.py  attn_qk_int8_per_block_h64_bf16.py  attn_qk_int8_per_block_h96.py  attn_qk_int8_per_block_h96_bf16.py  attn_qk_int8_per_block_h96_causal.py  attn_qk_int8_per_block_h96_causal_bf16.py  attn_qk_int8_per_block_hd128.py  attn_qk_int8_per_block_hd128_bf16.py  attn_qk_int8_per_block_hd128_causal.py  attn_qk_int8_per_block_hd128_causal_bf16.py  (+11 more)
(+109 files in other folders)
